# quepland_bot

./: README.md  pyproject.toml
quepland_bot/: __init__.py  quepland_bot.py
quepland_bot/application/exceptions/: __init__.py  coordinates_sequence_not_found_exception.py
quepland_bot/domain/entities/: __init__.py  coordinates_sequence.py
quepland_bot/domain/enums/: __init__.py  command_key_enum.py
quepland_bot/domain/exceptions/: __init__.py  coordinates_collection_empty_exception.py
quepland_bot/domain/ports/: __init__.py  click_recorder_port.py  mouse_loop_breaker_port.py  mouse_port.py
quepland_bot/domain/use_cases/: __init__.py  click_on_coordinates_sequence_use_case.py  record_clicks_use_case.py
quepland_bot/domain/value_objects/: __init__.py
quepland_bot/infrastructure/: __init__.py
quepland_bot/infrastructure/adapters/: __init__.py  pyautogui_mouse_adapter.py  pynput_mouse_loop_breaker_adapter.py
src/application/: __init__.py  quepland_bot.py
src/application/exceptions/: __init__.py  coordinates_sequence_not_found_exception.py
src/application/services/: quepland_bot.py
src/domain/entities/: __init__.py  coordinates_collection.py  coordinates_sequence.py
src/domain/enums/: __init__.py  command_key_enum.py  keyboard_key_enum.py
src/domain/exceptions/: __init__.py  coordinates_collection_empty_exception.py
src/domain/ports/: __init__.py  mouse_port.py  (+1 more)
src/entities/: coordinates_collection.py
src/infrastructure/: __init__.py
src/ports/: __init__.py
src/value_objects/: __init__.py  coordinates.py
tests/unit/: test_quepland_bot.py
(+16 files in other folders)
