[tool.poetry]
name = "quepland_bot"
version = "0.1.0"
description = ""
authors = ["Francisco Mascar"]

[tool.poetry.dependencies]
python = "^3.7"
PyAutoGUI = "^0.9.53"
pynput = "^1.7.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
