[tool.poetry]
name = "quepland_bot"
version = "0.1.01"
description = "Simple library to record and play mouse macros at regular intervals between clicks."
authors = ["Francisco Mascarenhas"]
license = "GPL3"
readme = "README.md"
repository = "https://github.com/francisco-mascarenhas/quepland_bot"
keywords = ["mouse", "macro", "automation", "record"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: Unix",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3"
]
include = [
    "LICENSE",
]
packages = [
    { include = "quepland_bot"}
]

[tool.poetry.dependencies]
python = "^3.7"
PyAutoGUI = "^0.9.53"
pynput = "1.7.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
mockito = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
